--- a/Unit4menu.html
+++ b/Unit4menu.html
@@ -14,7 +14,7 @@
         <li><a href="Modified euler's.html" target="targetframe">Modified euler's method</a></li>
         <li><a href="Runga kutta-2.html" target="targetframe">Runga kutta method - 2nd order</a></li>
         <li><a href="Runga kutta-4.html" target="targetframe">Runga kutta method - 4rd order</a></li>
-        <li><a href="Taylor series.html" target="targetframe">Runga kutta method - 4rd order</a></li>
+        <li><a href="Taylor series.html" target="targetframe">Taylor series</a></li>
 
         <ul>
 </body>
